--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,6 +11,8 @@ environment:
     - python: 35-x64
     - python: 36
     - python: 36-x64
+    - python: 37
+    - python: 37-x64
     - { python: 27, SUBUNIT: 1 }
     - { python: 27-x64, SUBUNIT: 1 }
     - { python: 33, SUBUNIT: 1 }
@@ -21,6 +23,8 @@ environment:
     - { python: 35-x64, SUBUNIT: 1 }
     - { python: 36, SUBUNIT: 1 }
     - { python: 36-x64, SUBUNIT: 1 }
+    - { python: 37, SUBUNIT: 1 }
+    - { python: 37-x64, SUBUNIT: 1 }
 
 install:
   - "SET PATH=C:\\Python%PYTHON%;c:\\Python%PYTHON%\\scripts;%PATH%"
